[package]
autotests = false
edition = "2018"
name = "derive_builder"
publish = false
version = "0.0.0"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = {version = "1.0", features = ["diff"]}

[dependencies]
quote = "1.0.9"
syn = {version = "1.0.75", features = ["extra-traits"]}
# TODO
